--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = [".", "entities", "migration"]
+members = [".", "shared", "entities", "migration"]
 
 [package]
 name = "users"
