--- a/entities/Cargo.toml
+++ b/entities/Cargo.toml
@@ -9,13 +9,15 @@ name = "entities"
 path = "src/lib.rs"
 
 [dependencies]
+shared = { path = "../shared" }
 serde = { version = "1.0.156", features = ["derive"] }
 bcrypt = "0.14.0"
 rand = "0.8.5"
 names = { version = "0.14.0", default-features = false }
 serde-email = "1.3.0"
-#sea-orm = "0.11.1"
-chrono = "0.4.24"
-
-[dependencies.sea-orm]
-version = "0.11.1"
+chrono = { version = "0.4.24", features = ["serde"] }
+log = "0.4.17"
+uuid = { version = "1.3.0", features = ["v4"] }
+url = "2.3.1"
+url_serde = "0.2.0"
+sea-orm = "0.11.1"
