--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -9,20 +9,9 @@ name = "migration"
 path = "src/lib.rs"
 
 [dependencies]
-async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
-chrono = "0.4.24"
+shared = { path = "../shared" }
 entities = { path = "../entities" }
+async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
+chrono = { version = "0.4.24", features = ["serde"] }
 sea-orm-migration = { version = "0.11.1", features = ["sqlx-postgres", "runtime-actix-rustls"] }
-
-#[dependencies.sea-query]
-#version = "0"
-#features = [
-#  "backend-postgres",
-#  "with-chrono",
-#  "with-json",
-#  "with-uuid",
-#  "postgres-array",
-#  "with-uuid",
-#  "with-ipnetwork",
-#  "with-mac_address"
-#]
+log = "0.4.17"
